<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jeff.quizzapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/Question1"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/question1_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:rotation="90"
            android:src="@drawable/simple_hip_roof" />

        <RadioGroup
            android:id="@+id/rbGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="64dp">


            <RadioButton
                android:id="@+id/question1_rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ridges" />

            <RadioButton
                android:id="@+id/question1_rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hips" />

            <RadioButton
                android:id="@+id/question1_rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Valleys" />

            <RadioButton
                android:id="@+id/question1_rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Barges" />

        </RadioGroup>

        <Button
            android:id="@+id/submit_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onSubmitButton1Clicked"
            android:padding="16dp"
            android:text="Submit" />

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/Question2"
            android:textSize="20sp" />

        <EditText
            android:layout_width="150dp"
            android:id="@+id/editTextAnswer2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#EEF"
            android:hint="Hint: 9 divide by 3"
            android:inputType="number" />

        <Button
            android:id="@+id/submit_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onSubmitButton2Clicked"
            android:padding="16dp"
            android:text="Submit" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/Question3"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="64dp">

            <CheckBox
                android:id="@+id/checkbox_dd400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dd400" />

            <CheckBox
                android:id="@+id/checkbox_kliplock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kliplock" />

            <CheckBox
                android:id="@+id/checkbox_trimdek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trimdek" />

        </LinearLayout>

        <Button
            android:id="@+id/submit_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onSubmitButton3Clicked"
            android:padding="16dp"
            android:text="Submit" />

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/Question4"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rbGroup4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="64dp">


            <RadioButton
                android:id="@+id/question4_rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="True" />

            <RadioButton
                android:id="@+id/question4_rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="False" />

        </RadioGroup>

        <Button
            android:id="@+id/submit_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onSubmitButton4Clicked"
            android:padding="16dp"
            android:text="Submit" />


    </LinearLayout>

</ScrollView>
